--- a/dotinst_undrscr/html/index.html
+++ b/dotinst_undrscr/html/index.html
@@ -20,12 +20,29 @@
 				})
 			*/
 
-			var x = _.map([2,5,8],function(num){
+			var z = _.map([2,5,8],function(num){
 				return num * 2;
-			})
+			});
 
-			var y = _.shuffle(x);
+			var y = _.shuffle(z);
 			console.log(y);
+
+			var a = [2,5,6,44,12];
+
+			var b = _.find(a,function(num){
+				return num > 5;
+
+			});
+			console.log(b);
+
+			var c = _.filter(a,function(num){
+				return num > 5;
+
+			});
+			console.log(c);
+
+			var d = _.contains(a,5);
+			console.log(d);
 
 		})();
 	</script>
