--- a/dotinst_undrscr/html/index.html
+++ b/dotinst_undrscr/html/index.html
@@ -51,6 +51,12 @@
 
 			console.log(f);
 
+			var g = _.countBy(e,function(num){
+				return num % 2 == 0 ? 'even' :  'odd';
+			});
+
+			console.log(g);
+
 		})();
 	</script>
 </body>
