--- a/dotinst_undrscr/html/index.html
+++ b/dotinst_undrscr/html/index.html
@@ -46,11 +46,9 @@
 			j = _.intersection(h,i);
 			console.log(j);
 			
-			j = _.difference(h,i);
-			console.log(j);
-
-			j = _.uniq([1,2,3,5,2,5]);
-			console.log(j);
+			var tpl = "<% console.log('hello from tpl'); %><li><%- name %>(<%- score%>)</li>";
+			var g = _.template(tpl,user);
+			console.log(g);
 
 			var a;
 			a = _.range(1,11,2);
