--- a/dotinst_undrscr/html/bkbone.html
+++ b/dotinst_undrscr/html/bkbone.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script type="text/template" id="task-template">
-		<%- title %>
+		<%- title %> <span class="command">command</span>
 	</script>
 	<script src="../lib/underscore-min.js"></script>
 	<script src="../lib/jquery-1.9.1.min.js"></script>
