--- a/dotinst_undrscr/html/bkbone.html
+++ b/dotinst_undrscr/html/bkbone.html
@@ -10,6 +10,11 @@
 	<script src="../lib/backbone-min.js"></script>
 	<script src="../js/app.js"></script>
 
+	<h1>Tasks</h1>
+	<div id="tasks"></div>
+	<script type="text/template" id="task-template">
+		<%- title %>
 	</script>
+
 </body>
 </html>
