--- a/dotinst_undrscr/html/bkbone.html
+++ b/dotinst_undrscr/html/bkbone.html
@@ -3,18 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Backbone.js</title>
+	<style>
+		.completed{
+			text-decoration: line-through;;
+			color:gray;
+		}
+	</style>
 </head>
 <body>
+
+
+	<h1>Tasks</h1>
+	<form id="addTask">
+		<input type="text" id="title">
+		<input type="submit" value="add">
+		<span id="error"></span>
+
+	</form>
+
+	<div id="tasks"></div>
+	<p>tasks left:<span id="count"></span></p>
+
+	<script type="text/template" id="task-template">
+		<input type="checkbox" class="toggle" <%= completed ? 'checked':'' %>>
+		<span class = "<%= completed ? 'completed' : '' %>">
+			<%- title %>
+		</span>
+		<span class="delete">[X]</span>
+	</script>
+
 	<script src="../lib/underscore-min.js"></script>
 	<script src="../lib/jquery-1.9.1.min.js"></script>
 	<script src="../lib/backbone-min.js"></script>
 	<script src="../js/app.js"></script>
 
-	<h1>Tasks</h1>
-	<div id="tasks"></div>
-	<script type="text/template" id="task-template">
-		<%- title %>
-	</script>
 
 </body>
 </html>
